# vizStudy

./: .gitignore  README.md
code/qualtrics/: imgDelete.py  imgIDURL_Ref.csv  imgIDURL_Tgt.csv  imgID_Generator.py  imgNameID_Ref.csv  imgName_Tgt.csv  imgQualityMetrics.csv  imgUploader.py  imgUploader.sh  readme.md
code/qualtrics/scripts/: deleteList.txt  imgDBMerger.py  imgNameIDURL_Ref.csv  imgNameIDURL_Tgt.csv  imgNameID_Tgt.csv  imgName_Ref.csv  imgOrganize.py  imgQA.py  imgRename.py  imgUtils.py  utils.py
code/scripts/: imgDiff.py  run_NyxCompression.sh  run_NyxCompression_local.sh  run_viz.sh
database/: data_metrics.csv  decompressed  img_metrics.csv
database/state_files/: baryon_density_blue2cyan.py  baryon_density_blue2cyan_nobg.py  baryon_density_cool2warm.py  baryon_density_cool2warm_nobg.py  baryon_density_jet.py  baryon_density_jet_nobg.py  baryon_density_plasma.py  baryon_density_plasma_nobg.py  baryon_density_viridis.py  baryon_density_viridis_nobg.py  dark_matter_density_blue2cyan.py  dark_matter_density_cool2warm.py  dark_matter_density_jet.py  dark_matter_density_plasma.py  dark_matter_density_viridis.py  temperature_blue2cyan.py  temperature_cool2warm.py  temperature_jet.py  temperature_plasma.py  temperature_viridis.py  velocity_x_blue2cyan.py  velocity_x_cool2warm.py  velocity_x_jet.py  velocity_x_plasma.py  velocity_x_viridis.py
misc/: readme.md
project_libra/: README.md  experiments.ipynb  main.py  pyproject.toml  requirements.txt
project_libra/libra/: img_comp.py  module.py  single_metrics.py  utils.py
(+44 files in other folders)
